Upgraded to Java 17 and switched from jpackage to GraalVM
Also small tweaks to build.gradle.kts