@@ -1,6 +1,6 @@
 plugins {
     application
-    id("org.beryx.runtime") version "1.12.2"
+    id("org.graalvm.buildtools.native") version "0.9.9"
 }
 
 group = "com.piorrro33"
@@ -10,17 +10,22 @@ application {
     mainClass.set("com.github.piorrro33.hd6tools.Main")
 }
 
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(16))
-    }
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("-Aproject=${project.group}/${project.name}")
+    options.encoding = "UTF-8"
+    options.release.set(17)
 }
 
-runtime {
-    addOptions("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages")
-    modules.addAll("java.base")
-    jpackage {
-        appVersion = "0.2"
+tasks.withType<JavaExec> {
+    standardInput = System.`in` // Allows user input while running from Gradle
+    outputs.upToDateWhen { false }
+}
+
+tasks.test {
+    useJUnitPlatform()
+
+    testLogging {
+        events("passed", "skipped", "failed")
     }
 }
 
@@ -29,57 +34,23 @@ repositories {
 }
 
 dependencies {
-    implementation("info.picocli:picocli:4.6.1")
-    annotationProcessor("info.picocli:picocli-codegen:4.6.1")
+    implementation("info.picocli:picocli:4.6.2")
+    annotationProcessor("info.picocli:picocli-codegen:4.6.2")
 
     testImplementation(platform("org.junit:junit-bom:5.7.1"))
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
 
-tasks.create("jpackageImageWin64") {
-    doFirst {
-        runtime {
-            targetPlatform("win64") {
-                setJdkHome(jdkDownload("https://github.com/AdoptOpenJDK/openjdk16-binaries/releases/download/jdk-16%2B36/OpenJDK16-jdk_x64_windows_hotspot_16_36.zip"))
-            }
-            jpackage {
-                targetPlatformName = "win64"
-                outputDir = "jpackage/${project.name}-${project.version}-${targetPlatformName}"
-                imageOptions = listOf("--win-console")
-            }
+graalvmNative {
+    binaries {
+        named("main") {
+            buildArgs.add("-H:+AddAllCharsets")
+            imageName.set(project.name)
+            javaLauncher.set(javaToolchains.launcherFor {
+                languageVersion.set(JavaLanguageVersion.of(17))
+                vendor.set(JvmVendorSpec.GRAAL_VM)
+            })
+            verbose.set(true)
         }
-    }
-    finalizedBy("jpackageImage")
-}
-
-tasks.create("jpackageImageLinux64") {
-    group = "build"
-    doFirst {
-        runtime {
-            targetPlatform("linux-x64") {
-                setJdkHome(jdkDownload("https://github.com/AdoptOpenJDK/openjdk16-binaries/releases/download/jdk-16%2B36/OpenJDK16-jdk_x64_linux_hotspot_16_36.tar.gz"))
-            }
-            jpackage {
-                targetPlatformName = "linux-x64"
-                outputDir = "jpackage/${project.name}-${project.version}-${targetPlatformName}"
-            }
-        }
-    }
-    finalizedBy("jpackageImage")
-}
-
-tasks.withType<JavaCompile> {
-    options.compilerArgs.add("-Aproject=${project.group}/${project.name}")
-    options.release.set(16)
-    // Hack for Java 16 support
-    options.isIncremental = false
-//    options.forkOptions.jvmArgs?.addAll(listOf("--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"))
-}
-
-tasks.test {
-    useJUnitPlatform()
-
-    testLogging {
-        events("passed", "skipped", "failed")
     }
 }
